[package]
name = "divay"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }
binrw = "0.13.3"
csv = "1.3.0"
encoding_rs = "0.8.33"
reqwest = { version = "0.12.4", features = ["json"] }
indicatif = "0.17.8"
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
